# metaclaw

./: .editorconfig  .env.example  .gitignore  .gitmodules  .versionrc.json  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  INSTALL.md  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  SECURITY.md  WORKSPACE_LAYOUT.md  app.py  config-template.json  config.py  docker-compose.override.yml  nginx.conf  package-lock.json  package.json  pyproject.toml  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-image-arm.yml  deploy-image.yml  release.yml  secret-scan.yml
.husky/: pre-commit
agent/memory/: config.py  conversation_store.py  service.py
agent/prompt/: workspace.py
agent/protocol/: agent_stream.py
agent/skills/: frontmatter.py
bridge/: agent_bridge.py  agent_initializer.py
channel/: chat_channel.py
channel/dingtalk/: dingtalk_channel.py  dingtalk_message.py
channel/feishu/: feishu_channel.py  feishu_message.py
channel/qq/: qq_message.py
channel/web/: chat.html  web_channel.py
channel/wecom_bot/: wecom_bot_message.py
channel/weixin/: weixin_channel.py  weixin_message.py
cli/: __init__.py  cli.py  utils.py
common/: brand.py  cloud_client.py  log.py  session_cancel.py  session_tmp.py
docker/: Dockerfile.latest  build.latest.sh  docker-compose.yml  entrypoint.sh
docs/: docs.json
knowledge/: index.md
metaclaw/: launch.sh
plugins/: plugin_manager.py
reports/: niacinamide-blue-ocean-report-2026-04-28.md
scripts/: cloud-deploy.sh  deploy.sh  install.sh  run.ps1  setup.sh  shutdown.sh  start.sh  tout.sh  uninstall.sh
skills/: README.md  skills_config.json
tests/: install.bats  test_agent_initializer_sandbox.py  test_bash_sandbox.py  test_cli_config.py  test_config_security.py  test_process_update.py  test_release_packaging.py  test_sandbox_config.py  test_session_tmp.py
(+152 files in other folders)
